--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <title>Jonathan Gilmour</title>
+  <style>
+    body {
+      text-align: center;
+      background: url("/images/earnslaw_burn.jpg");
+      background-size: cover;
+      background-position: center;
+      color: white;
+      font-family: helvetica;
+    }
+    p {
+      font-size: 22px;
+    }
+    input {
+      border: 0;
+      padding: 10px;
+      font-size: 18px;
+    }
+    input[type="submit"] {
+      background: red;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-
-<div class="container-fluid">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
-</div>
-
+  <img src="/images/me_with_dog.jpg">
+  <p>Hi! I'm Jonathan, a computer scientist and recent Grinnell grad.</p>
+  <ul>
+      <li><a href="#">About Me</a></li>
+      <li><a href="#">Linkedin</a></li>
+      <li><a href="#">GitHub</a></li>
+    </ul>
 </body>
-</html>
