--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       font-family: helvetica;
     }
     img {
-      max-width: 250;
       margin: 40px 0px 0px 0px;
       border: 7px solid white;
       border-radius: 20px;
+      height: 240;
+      width: 196;
     }
     p {
       font-size: 22px;
@@ -26,7 +27,8 @@
     }
     @media (max-width: 500px) {
       img {
-        max-width: 100; 
+        max-width: 96; 
+        max-height: 120;
       }
       li {
         padding: 5px;
