--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <style>
     body {
       text-align: center;
-      background: url("/images/earnslaw_burn.jpg");
+      /*background: url("/images/earnslaw_burn.jpg");
       background-size: cover;
-      background-position: center;
-      color: white;
+      background-position: center;*/
+      background-color: lavender;
+      color: black;
       font-family: helvetica;
     }
     img {
       margin: 40px 0px 0px 0px;
       border: 7px solid white;
       border-radius: 20px;
-      height: 240;
-      width: 196;
+      max-height: 20%;
     }
     p {
       font-size: 22px;
