--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       margin: 40px 0px 0px 0px;
       border: 7px solid white;
       border-radius: 20px;
-      max-height: 20%;
+      max-width: 30%;
     }
     p {
       font-size: 22px;
