--- a/charttest.html
+++ b/charttest.html
@@ -1,1 +1,4 @@
-<div class="flourish-embed flourish-chart" data-src="visualisation/8845451?889196"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+<!DOCTYPE html>
+<body>
+  <div class="flourish-embed flourish-chart" data-src="visualisation/8845451?889196"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+</body>
