--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     }
     body {
       text-align: left;
+      padding: 0px 100px;
       background-color: lavender;
       color: black;
       font-family: helvetica;
