--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <li>Study Abroad at <a target="_blank" rel="noopener noreferrer" href="https://www.ait-budapest.com/">Aquincum Institute of Technology</a> (2017)</li>
 </ul>
 <br>
-<h3>Select Works</h3>
+<h3>Select Publications</h3>
 <ul>
     <li>
         <h4>Rockefeller Foundation/Pandemic Tracking Collective</h4>
