--- a/index.html
+++ b/index.html
@@ -122,5 +122,5 @@
     <li-a>jonatgilmour [at] gmail [dot] com</li-a>
 </ul>
 </body>
-<footer> <small> Copyright &copy; Jonathan Gilmour 2024</small> </footer> 
+<footer> <small> &copy; 2024 Jonathan Gilmour</small> </footer> 
 
