--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div>
     <img src="/images/PPM02-6625.jpg">
     <div>
-        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist and software engineer. I'm honored to be an Aspen Institute Future Leader Climate Fellow. I'm looking for impactful work on hard problems in the realms of public health and climate.</strong></h2>
+        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist, software engineer, and communicator. I'm honored to be an Aspen Institute Future Leader Climate Fellow. I’m an innovator and collaborator, leading teams and working with stakeholders to build unique data solutions to combat the biggest problems of our time: the pandemic and the climate crisis. If this sounds interesting, I’d love to chat with you.</strong></h2>
 
     </div>
 </div>
@@ -117,7 +117,7 @@
 <ul>
     <li-a><a href="https://www.linkedin.com/in/jonathangilmour/">LinkedIn</a></li-a>
     <li-a><a href="https://github.com/gilmourj">GitHub</a></li-a>
-    <li-a><a href="https://drive.google.com/file/d/1MdVGTh5fb-rn3SapZ9V1PSbq90GblpmJ/view?usp=sharing">Resume</a></li-a>
+    <li-a><a href="https://drive.google.com/file/d/1xZk01btnvoYUPL679ROxgGDAZQg89Mys/view?usp=sharing">Resume</a></li-a>
     <li-a><a href="https://scholar.google.com/citations?user=o3WrU2cAAAAJ&hl=en">Google Scholar</a></li-a>
     <li-a>jonatgilmour [at] gmail [dot] com</li-a>
 </ul>
