--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
 <ul>
     <li>Data Scientist/Software Engineer at <a target="_blank" rel="noopener noreferrer" href="https://nightware.com/">NightWare</a> (2023)</li>
     <li>Advisor to the <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a> <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/initiative/pandemic-prevention-initiative/">Pandemic Prevention Initiative</a> (2021–2023)</li>
-    <li>Data Scientist at the <a target="_blank" rel="noopener noreferrer" href="https://pandemictracking.org/">Pandemic Tracking Collective</a> (2021–2023)</li>
+    <li>Data Scientist and Founding Member at the <a target="_blank" rel="noopener noreferrer" href="https://pandemictracking.org/">Pandemic Tracking Collective</a> (2021–2023)</li>
     <li>Data Infrastructure Engineer at <a target="_blank" rel="noopener noreferrer" href="https://covidtracking.com/">The COVID Tracking Project at <i>The Atlantic</i> </a>(2020-2021)</li>
-    <li>Head of Data and Marketing at 0260 Solutions LLC (2020)</li>
 </ul>
-<p>Some of my specialties include turning messy datasets into actionable insights through visualizations and data-driven articles, communicating difficult topics in clear, concise language, and building scaleable tooling.</p>
+<p>My specialties include turning messy datasets into actionable insights through visualizations and data-driven articles, communicating difficult topics in clear, concise language, and building scaleable tooling.</p>
 
 <h3><br>Education</h3>
 <ul>
