--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
   <div>
     <img src="/images/PPM02-6625.jpg">
     <div>
-        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist, software engineer, and communicator. I'm honored to be an Aspen Institute Future Leader Climate Fellow. I’m an innovator and collaborator, leading teams and working with stakeholders to build unique data solutions to combat the biggest problems of our time: the pandemic and the climate crisis. If this sounds interesting, I’d love to chat with you.</strong></h2>
-
+        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist, software engineer, and data communicator. I'm honored to be an Aspen Institute Future Leader Climate Fellow and an Aspen Tech Policy Fellow. I’m an innovator and collaborator, working to combat the biggest problem of our time: the climate crisis. Currently, I'm working on air pollution and extreme heat with the Harvard T.H. Chan School of Public Health. If this sounds interesting, I’d love <a target="_blank" rel="noopener noreferrer" href="https://calendly.com/jonathangilmour/30min">to chat</a>.</strong></h2>
     </div>
 </div>
   <h3>Professional Experience</h3>
 <ul>
-    <li>Data Scientist/Software Engineer at <a target="_blank" rel="noopener noreferrer" href="https://nightware.com/">NightWare</a> (2023)</li>
+    <li>Data Scientist at <a target="_blank" rel="noopener noreferrer" href="https://www.hsph.harvard.edu/">Harvard T.H. Chan School of Public Health</a> (2024)</li>
+    <li>Science and Tech Policy Fellow at <a target="_blank" rel="noopener noreferrer" href="https://www.aspentechpolicyhub.org/meet-the-2024-science-technology-policy-fellowship-class/">Aspen Tech Policy Hub</a> (2024)</li>
+    <!-- <li>Data Scientist/Software Engineer at <a target="_blank" rel="noopener noreferrer" href="https://nightware.com/">NightWare</a> (2023)</li> -->
     <li>Advisor to the <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a> <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/initiative/pandemic-prevention-initiative/">Pandemic Prevention Initiative</a> (2021–2023)</li>
     <li>Data Scientist and Founding Member at the <a target="_blank" rel="noopener noreferrer" href="https://pandemictracking.org/">Pandemic Tracking Collective</a> (2021–2023)</li>
     <li>Data Infrastructure Engineer at <a target="_blank" rel="noopener noreferrer" href="https://covidtracking.com/">The COVID Tracking Project at <i>The Atlantic</i> </a>(2020-2021)</li>
 </ul>
-<p>My specialties include turning messy datasets into actionable insights through visualizations and data-driven articles, communicating difficult topics in clear, concise language, and building scaleable tooling.</p>
+<p>My specialties include turning messy datasets into actionable insights through visualizations and data-driven articles, communicating difficult topics in clear, concise language, and building scalable tooling.</p>
 
 <h3><br>Education</h3>
 <ul>
@@ -68,6 +69,12 @@
 <br>
 <h3>Select Publications</h3>
 <ul>
+      <li>
+        <h4>Personal Writing</i></h4>
+        <ul>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://medium.com/@jonatgilmour/protect-at-risk-new-yorkers-from-heat-by-restoring-funding-to-nyc-libraries-c10b3595f652">Protect At-Risk New Yorkers from Heat by Restoring Funding to NYC Libraries</a> (June 2024)</li>
+        </ul>
+    </li>
     <li>
         <h4>Rockefeller Foundation/Pandemic Tracking Collective</h4>
         <ul>
@@ -77,6 +84,7 @@
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/insights/perspective/a-users-guide-to-u-s-vaccine-breakthrough-rates/">A User’s Guide to U.S. Vaccine Breakthrough Rates</a> (April 2022)</li>
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/insights/grantee-impact-story/variants-sublineages-and-recombinants-the-constantly-changing-genome-of-sars-cov-2/">Variants, Sublineages, and Recombinants: The Constantly Changing Genome of SARS-CoV-2</a> (March 2022)</li>
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/insights/grantee-impact-story/tracking-sars-cov-2-and-its-variants-in-wastewater-an-old-technique-is-yielding-powerful-new-insights-in-the-covid-19-pandemic/">Tracking SARS-CoV-2 and its Variants in Wastewater: An Old Technique is Yielding Powerful New Insights in the COVID-19 Pandemic</a> (February 2022)</li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/insights/grantee-impact-story/vaccine-inequity-increases-the-risk-of-new-sars-cov-2-variants-emerging/">Vaccine Inequity Increases the Risk of New SARS-CoV-2 Variants Emerging</a> (December 2021)</li>
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/insights/grantee-impact-story/tracking-state-reporting-of-covid-19-vaccine-breakthrough-infections/">Tracking State Reporting of Covid-19 Vaccine Breakthrough Infections</a> (December 2021)</li>
         </ul>
     </li>
@@ -100,6 +108,8 @@
 
 <h3>Awards and Recognition</h3>
 <ul>
+    <li><a target="_blank" rel="noopener noreferrer" href="https://www.aspentechpolicyhub.org/savilla-pitt-memorial-fellowship/">Savilla Pitt Memorial Fellowship</a> (2024)</li>
+    <li><a target="_blank" rel="noopener noreferrer" href="https://www.aspentechpolicyhub.org/team/jonathan-gilmour/">Aspen Science and Tech Policy Fellowship</a> (2024)</li>
     <li><a target="_blank" rel="noopener noreferrer" href="https://www.futureleaders.aspeninstitute.org/2024-aspen-future-leaders/jonathan-gilmour-">Aspen Institute Future Leader Climate Fellow</a> (2024)</li>
     <li><a target="_blank" rel="noopener noreferrer" href="https://www.grinnell.edu/">Grinnell College</a> Dean's List (select semesters 2015–2019)</li>
     <li><a target="_blank" rel="noopener noreferrer" href="https://watson.foundation/fellowships/tj">Thomas J. Watson Fellowship</a> Finalist (2018)</li>
