--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div>
     <img src="/images/PPM02-6625.jpg">
     <div>
-        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist, software engineer, and data communicator. Currently, I'm researching human health impacts of climate change at the Harvard T.H. Chan School of Public Health. I'm especially interested in the environmental impacts of AI and data centers and our adaptation to climate change. I'm also working to preserve critical federal data with the Public Environmental Data Partners. If any of this sounds interesting, let's chat!</strong></h2>
+        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist, software engineer, and data communicator. Currently, I'm working to preserve critical federal data with the <a target="_blank" rel="noopener noreferrer" href="https://screening-tools.com/">Public Environmental Data Partners</a>. I'm also researching human health impacts of climate change at the Harvard T.H. Chan School of Public Health. I'm especially interested in the environmental impacts of AI and data centers and our adaptation to climate change. If any of this sounds interesting, let's chat!</strong></h2>
     </div>
 </div>
   <h3>Professional Experience</h3>
@@ -61,11 +61,6 @@
 </ul>
 <p>My specialties include turning messy datasets into actionable insights through visualizations and data-driven articles, communicating difficult topics in clear, concise language, and building scalable tooling.</p>
 
-<h3><br>Education</h3>
-<ul>
-    <li>BA in Computer Science, <a target="_blank" rel="noopener noreferrer" href="https://www.grinnell.edu/">Grinnell College</a> (2019)</li>
-    <li>Study Abroad at <a target="_blank" rel="noopener noreferrer" href="https://www.ait-budapest.com/">Aquincum Institute of Technology</a> (2017)</li>
-</ul>
 <br>
 <h3>Media</h3>
 <ul>
@@ -125,6 +120,13 @@
             <li><a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/abs/10.1145/3287324.3287510">A Middle-School Camp Emphasizing Data Science and Computing for Social Good</a> (February 2019)</li>
         </ul>
     </li>
+</ul>
+<br>
+  
+<h3><br>Education</h3>
+<ul>
+    <li>BA in Computer Science, <a target="_blank" rel="noopener noreferrer" href="https://www.grinnell.edu/">Grinnell College</a> (2019)</li>
+    <li>Study Abroad at <a target="_blank" rel="noopener noreferrer" href="https://www.ait-budapest.com/">Aquincum Institute of Technology</a> (2017)</li>
 </ul>
 <br>
 
