--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
     <li>Data Scientist and Software Engineer at <a target="_blank" rel="noopener noreferrer" href="https://nightware.com/">NightWare</a> (2023)</li>
     <li>Advisor to the <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a> <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/initiative/pandemic-prevention-initiative/">Pandemic Prevention Initiative</a> (2021–2023)</li>
     <li>Data Scientist and Founding Member at the <a target="_blank" rel="noopener noreferrer" href="https://pandemictracking.org/">Pandemic Tracking Collective</a> (2021–2023)</li>
-    <li>Data Infrastructure Engineer at <a target="_blank" rel="noopener noreferrer" href="https://covidtracking.com/">The COVID Tracking Project at <i>The Atlantic</i> </a>(2020-2021)</li>
+    <li>Data Infrastructure Engineer at <a target="_blank" rel="noopener noreferrer" href="https://covidtracking.com/">The COVID Tracking Project at <i>The Atlantic</i> </a>(2020–2021)</li>
 </ul>
 <p>My specialties include turning messy datasets into actionable insights through visualizations and data-driven articles, communicating difficult topics in clear, concise language, and building scalable tooling.</p>
 
 <br>
 <h3>Media</h3>
 <ul>
+    <li>ESGDive: <a target="_blank" rel="noopener noreferrer" href="https://www.esgdive.com/news/sustainability-remains-ai-elephant-in-the-room-dc-climate-week/747277/">Prioritizing sustainability remains the ‘elephant in the room’ for AI</a> (May 6, 2025)</li>
     <li>Thomson Reuters Context: <a target="_blank" rel="noopener noreferrer" href="https://www.context.news/digital-rights/volunteers-on-right-side-of-history-fight-trump-data-purge">Volunteers on 'right side of history' fight Trump data purge</a> (April 7, 2025)</li>
     <li>New Scientist: <a target="_blank" rel="noopener noreferrer" href="https://www.newscientist.com/article/2470279-us-scientists-rebuild-climate-risk-map-deleted-from-government-site/">US scientists rebuild climate risk map deleted from government site</a> (February 28, 2025)</li>
     <li>Radio-Canada: <a target="_blank" rel="noopener noreferrer" href="https://ici.radio-canada.ca/ohdio/premiere/emissions/les-annees-lumiere/segments/rattrapage/1993621/mobilisation-scientifiques-americains-details-avec-r-manuguerra">Des scientifiques s’organisent pour préserver des données de purges gouvernementales</a> (February 16, 2025)</li>
@@ -85,7 +86,8 @@
     <li>
         <h4>Harvard T.H. Chan School of Public Health</i></h4>
         <ul>
-          <li><a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/html/2411.09786v1#:~:text=Our%20findings%20reveal%20that%20data,of%20US%20emissions%20in%202023">Environmental Burden of United States Data Centers in the Artificial Intelligence Era (arXiv)</a> (November 2024)</li>
+          <li>(foreword) Schneider Electric Sustainability Research Institute: <a target="_blank" rel="noopener noreferrer" href="https://www.se.com/ww/en/insights/sustainability/sustainability-research-institute/powering-sustainable-ai-in-the-united-states/">Powering sustainable AI in the United States</a> (April 2025)</li>
+          <li><a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/html/2411.09786v1">Environmental Burden of United States Data Centers in the Artificial Intelligence Era (arXiv)</a> (November 2024)</li>
         </ul>
     </li>
     <li>
