--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <br>
 <h3>Media</h3>
 <ul>
+    <li>KTNV (ABC): <a target="_blank" rel="noopener noreferrer" href="https://www.ktnv.com/news/billion-dollar-disasters-have-been-tracked-since-1980-thats-no-longer-the-case">Billion-dollar disasters have been tracked since 1980 — that's no longer the case</a> (May 14, 2025)</li>
     <li>ESGDive: <a target="_blank" rel="noopener noreferrer" href="https://www.esgdive.com/news/sustainability-remains-ai-elephant-in-the-room-dc-climate-week/747277/">Prioritizing sustainability remains the ‘elephant in the room’ for AI</a> (May 6, 2025)</li>
     <li>Thomson Reuters Context: <a target="_blank" rel="noopener noreferrer" href="https://www.context.news/digital-rights/volunteers-on-right-side-of-history-fight-trump-data-purge">Volunteers on 'right side of history' fight Trump data purge</a> (April 7, 2025)</li>
     <li>New Scientist: <a target="_blank" rel="noopener noreferrer" href="https://www.newscientist.com/article/2470279-us-scientists-rebuild-climate-risk-map-deleted-from-government-site/">US scientists rebuild climate risk map deleted from government site</a> (February 28, 2025)</li>
@@ -159,6 +160,7 @@
 <br>
 <ul>
     <li-a><a href="https://www.linkedin.com/in/jonathangilmour/">LinkedIn</a></li-a>
+    <li-a><a href="https://bsky.app/profile/jonathang.bsky.social">Bluesky</a></li-a>
     <li-a><a href="https://github.com/gilmourj">GitHub</a></li-a>
     <!-- <li-a><a href="https://drive.google.com/file/d/1xZk01btnvoYUPL679ROxgGDAZQg89Mys/view?usp=sharing">Resume</a></li-a> --> 
     <!-- <li-a><a href="https://scholar.google.com/citations?user=o3WrU2cAAAAJ&hl=en">Google Scholar</a></li-a> -->
