--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
   <div>
     <img src="/images/PPM02-6625.jpg">
     <div>
-        <h2><strong>Hi! I'm Jonathan Gilmour, a data scientist, software engineer, and data communicator. Currently, I'm working to preserve critical federal data with the <a target="_blank" rel="noopener noreferrer" href="https://screening-tools.com/">Public Environmental Data Partners</a>. I'm also researching human health impacts of climate change at the Harvard T.H. Chan School of Public Health. I'm especially interested in the environmental impacts of AI and data centers and our adaptation to climate change.</strong></h2>
+        <h2><strong>Hi! I'm Jonathan, a data scientist, speaker, and data communicator. Currently, I'm preserving critical federal data and tools with the <a target="_blank" rel="noopener noreferrer" href="https://screening-tools.com/">Public Environmental Data Partners</a>. I'm also working on climate and environmental impacts on health at the Harvard School of Public Health. I'm especially interested in the health and environmental impacts of AI and data centers, our adaptation to climate change, and safeguarding democracy.</strong></h2>
     </div>
 </div>
   <h3>Professional Experience</h3>
 <ul>
     <li>Data Scientist at <a target="_blank" rel="noopener noreferrer" href="https://www.hsph.harvard.edu/">Harvard T.H. Chan School of Public Health</a> (2024–present)</li>
     <li>Science and Tech Policy Fellow at <a target="_blank" rel="noopener noreferrer" href="https://aspenpolicyacademy.org/news/meet-the-2024-science-technology-policy-fellowship-class/">Aspen Policy Academy</a> (2024)</li>
-    <li>Data Scientist and Software Engineer at <a target="_blank" rel="noopener noreferrer" href="https://nightware.com/">NightWare</a> (2023)</li>
     <li>Advisor to the <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a> <a target="_blank" rel="noopener noreferrer" href="https://www.rockefellerfoundation.org/initiative/pandemic-prevention-initiative/">Pandemic Prevention Initiative</a> (2021–2023)</li>
     <li>Data Scientist and Founding Member at the <a target="_blank" rel="noopener noreferrer" href="https://pandemictracking.org/">Pandemic Tracking Collective</a> (2021–2023)</li>
     <li>Data Infrastructure Engineer at <a target="_blank" rel="noopener noreferrer" href="https://covidtracking.com/">The COVID Tracking Project at <i>The Atlantic</i> </a>(2020–2021)</li>
@@ -64,6 +63,7 @@
 <br>
 <h3>Media</h3>
 <ul>
+    <li>The Data Fix with Dr. Mél Hogan (podcast): <a target="_blank" rel="noopener noreferrer" href="https://shows.acast.com/the-data-fix/episodes/water-with-rebecca-kilberg-mary-clare-bosco-jonathan-gilmour">Water, with Rebecca Kilberg, Mary-Clare Bosco and Jonathan Gilmour</a> (June 16, 2025)</li>
     <li>Everybody in the Pool (podcast): <a target="_blank" rel="noopener noreferrer" href="https://shows.acast.com/64558952edc160001121ec0b/683929502780b226c75f7885">E91: Saving federal data with Jonathan Gilmour</a> (May 30, 2025)</li>
     <li>KTNV (ABC): <a target="_blank" rel="noopener noreferrer" href="https://www.ktnv.com/news/billion-dollar-disasters-have-been-tracked-since-1980-thats-no-longer-the-case">Billion-dollar disasters have been tracked since 1980 — that's no longer the case</a> (May 14, 2025)</li>
     <li>ESGDive: <a target="_blank" rel="noopener noreferrer" href="https://www.esgdive.com/news/sustainability-remains-ai-elephant-in-the-room-dc-climate-week/747277/">Prioritizing sustainability remains the ‘elephant in the room’ for AI</a> (May 6, 2025)</li>
