--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 <br>
 <h3>Media</h3>
 <ul>
+    <li>St. Cloud Times: <a target="_blank" rel="noopener noreferrer" href="https://www.pressreader.com/usa/st-cloud-times/20250802/281496462345207/textview">Experts: 'climate erasure' in progress</a> (August 2, 2025)</li>
+    <li>Thomson Reuters Context: <a target="_blank" rel="noopener noreferrer" href="https://www.context.news/digital-rights/trumps-attack-on-climate-data-escalates-across-government">Trump's 'targeted' attack on climate data escalates across government</a> (August 1, 2025)</li>
     <li>The Data Fix with Dr. Mél Hogan (podcast): <a target="_blank" rel="noopener noreferrer" href="https://shows.acast.com/the-data-fix/episodes/water-with-rebecca-kilberg-mary-clare-bosco-jonathan-gilmour">Water, with Rebecca Kilberg, Mary-Clare Bosco and Jonathan Gilmour</a> (June 16, 2025)</li>
     <li>Everybody in the Pool (podcast): <a target="_blank" rel="noopener noreferrer" href="https://shows.acast.com/64558952edc160001121ec0b/683929502780b226c75f7885">E91: Saving federal data with Jonathan Gilmour</a> (May 30, 2025)</li>
     <li>KTNV (ABC): <a target="_blank" rel="noopener noreferrer" href="https://www.ktnv.com/news/billion-dollar-disasters-have-been-tracked-since-1980-thats-no-longer-the-case">Billion-dollar disasters have been tracked since 1980 — that's no longer the case</a> (May 14, 2025)</li>
@@ -165,8 +167,6 @@
     <li-a><a href="https://www.linkedin.com/in/jonathangilmour/">LinkedIn</a></li-a>
     <li-a><a href="https://bsky.app/profile/jonathang.bsky.social">Bluesky</a></li-a>
     <li-a><a href="https://github.com/gilmourj">GitHub</a></li-a>
-    <!-- <li-a><a href="https://drive.google.com/file/d/1xZk01btnvoYUPL679ROxgGDAZQg89Mys/view?usp=sharing">Resume</a></li-a> --> 
-    <!-- <li-a><a href="https://scholar.google.com/citations?user=o3WrU2cAAAAJ&hl=en">Google Scholar</a></li-a> -->
     <li-a>jonatgilmour [at] gmail [dot] com</li-a>
 </ul>
 </body>
